src/test/ui/inference/tutorial-suffix-inference-test.stderr
error[E0308]: mismatched types
  --> $DIR/tutorial-suffix-inference-test.rs:9:18
   |
LL |     identity_u16(x);
   |                  ^ expected `u16`, found `u8`
   |
help: you can convert a `u8` to a `u16`
   |
LL |     identity_u16(x.into());
   |                   +++++++

error[E0308]: mismatched types
  --> $DIR/tutorial-suffix-inference-test.rs:12:18
   |
LL |     identity_u16(y);
   |                  ^ expected `u16`, found `i32`
   |
help: you can convert an `i32` to a `u16` and panic if the converted value doesn't fit
   |
LL |     identity_u16(y.try_into().unwrap());
   |                   ++++++++++++++++++++

error[E0308]: mismatched types
  --> $DIR/tutorial-suffix-inference-test.rs:21:18
   |
LL |     identity_u16(a);
   |                  ^ expected `u16`, found `isize`
   |
help: you can convert an `isize` to a `u16` and panic if the converted value doesn't fit
   |
LL |     identity_u16(a.try_into().unwrap());
   |                   ++++++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
